css/style.css
body {
  background-color: #ffffff;
  /* overflow-x: hidden; */
  font-family: 'Montserrat', sans-serif;
}

h3 {
  text-align: center;
  color: #a50909;
}

p.italic {
  font-style: italic;
}

.content p {
  margin: 0pt 15pt;
}

nav.menu {
  margin: 20pt 0pt;
  margin-top: 35pt;
}

nav.menu ul {
  list-style: none;
  text-align: center;
  padding: 0;
  margin: 0;
}
nav.menu li {

  font-size: 1.2em;
  line-height: 20px;
  height: 45px;
  color: #1d1d1d;
  width: 200px;
  line-height: 50px;
  width: 18%;
}

nav.menu > ul > li:not(:first-child) {
  border-left: 1px #1d1d1d solid;
}

nav.menu li.current a > span {
  border-bottom: 1px #1d1d1d solid;
  padding-left: 10%;
  padding-right: 10%;
}

nav.menu a {
  display: block;
  transition: .3s background-color;
  color: #1d1d1d;
}

nav.menu a:hover {

}

nav.menu a.active {
  background-color: #fff;
  color: #444;
  cursor: default;
}

img.logo {
  width: 70px;
  margin-top: -15pt;
}

.pure-button-dark {
  background-color: #4b4b4b;
  color: #ffffff;

}

.pure-button-dark:hover, .pure-button-dark:visited {
  color: #ffffff;
}

.content {
  display:flex;justify-content:center;align-items:center;
  flex-direction: column;
}

img.showcase {
  margin-top: 10pt;
  margin-bottom: 10pt;
}

p.script-metadata {
  margin-bottom: 20pt;
}

  /* Option 1 - Display Inline */
  nav.menu  li {
    display: inline-block;
    vertical-align: middle;
    font-weight: 300;
  }
  a {
    text-decoration: none;
  }
  nav.menu li > a {
    text-transform: uppercase;
  }

p.name {
  font-weight: 400;
}

p.job {
  font-weight: 300;
  font-size: 10pt;
  text-transform: initial;
  margin-top: -27pt !important;
}

p.job, p.name {
  margin: 0;
  margin-top: -20pt;
}

.carousel, .grid {
  margin-top: 50pt;
}

.grid {
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
}

@media screen and (max-width: 650px) {

  .grid {
    grid-template-columns: 1fr;
  }

  .carousel, .grid {
    margin-top: 20pt;
  }

  nav.menu > ul > li.logo {
    position: absolute;
    top: 30pt;
    left: 0;
    margin-left: auto;
    margin-right: auto;
    border-left: none;
    right: 0;
    width: 100%;
  }

  nav.menu {
    padding-top: 80pt;
  }

  nav.menu li:not(.logo) {
    width: 22%;
    font-size: 0.8em;
  }

  .carousel .title {
    font-size: 12pt !important;
  }

  .carousel .subtitle {
    font-size: 12pt !important;
    bottom: 45pt;
  }
}

@media screen and (max-width: 1000px) {

  .carousel .title {
    font-size: 15pt !important;
  }

  .carousel .subtitle {
    font-size: 15pt !important;
    bottom: 45pt !important;
  }
}

.grid > div, .carousel > div {
  position: relative;
}

.grid img {
  width: 100%;
}

.carousel img {
  width: 100%;
}

.grid .title {
  position: absolute;
  bottom: 25pt;
  left: 20pt;
  color: #fff;
  font-weight: 800;
  font-size: 20pt;
  text-transform: uppercase;
}

.grid .subtitle {
  position: absolute;
  bottom: 8pt;
  left: 40pt;
  color: #fff;
  font-weight: 400;
  font-size: 20pt;
}


.carousel .title {
  position: absolute;
  bottom: 60pt;
  left: 20pt;
  color: #fff;
  font-weight: 800;
  font-size: 30pt;
  text-transform: uppercase;
}

.carousel .subtitle {
  position: absolute;
  bottom: 30pt;
  left: 40pt;
  color: #fff;
  font-weight: 400;
  font-size: 30pt;
}


.infobox {
  position: absolute;
  bottom: 5pt;
  padding: 15pt;
  color: white;
  background-color: rgba(0,0,0,0.5);
  transition: visibility 0s, opacity 0.5s linear;
  opacity: 0;
  visibility: hidden;
  padding-top: 5pt;
}

.grid > div:hover > .infobox {
  visibility: visible;
  opacity: 0.7;
}

.infobox > p:first-child {
  font-weight: 800;
}

.infobox p {
  margin: 0;
}

.infobox > a {
  float: right;
  border-bottom: 1px solid white;
  padding-top: 10pt;
  color: white;
}

.infobox > p.logline {
  text-indent: 10pt;
}

.grid > div:hover > .title {
  transition: bottom 0.5s linear;
  top: 0pt;
  bottom: 0pt;
}

.grid > div:hover > .subtitle {
  transition: top 0.5s linear;
  transition: bottom 0.5s linear;
  top: 20pt;
  bottom: 0pt;
}

/* ! - Slick Theme - ! */

button.slick-arrow {
  display: none !important;
}

.slick-dotted.slick-slider
{
    margin-bottom: 30px;
}

.slick-dots
{
    position: absolute;
    bottom: 20px;

    display: block;

    width: 100%;
    padding: 0;
    margin: 0;

    list-style: none;

    text-align: center;
}
.slick-dots li
{
    position: relative;

    display: inline-block;

    width: 20px;
    height: 20px;
    margin: 0 5px;
    padding: 0;

    cursor: pointer;
}
.slick-dots li button
{
    font-size: 0;
    line-height: 0;

    display: block;

    width: 20px;
    height: 20px;
    padding: 5px;

    cursor: pointer;

    color: transparent;
    border: 0;
    outline: none;
    background: transparent;
}
.slick-dots li button:hover,
.slick-dots li button:focus
{
    outline: none;
}
.slick-dots li button:hover:before,
.slick-dots li button:focus:before
{
    opacity: 1;
}
.slick-dots li button:before
{
    font-family: 'slick';
    font-size: 50pt;
    line-height: 20px;

    position: absolute;
    top: 0;
    left: 0;

    width: 20px;
    height: 20px;

    content: '•';
    text-align: center;

    opacity: .50;
    color: white;

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
.slick-dots li.slick-active button:before
{
  opacity: 1.0;
  color: white;
}

